XXXXXXXX - 1.03
    - When binding to the IPv6 socket for the CLI fails, IPv4 is tried
    - Introduced loglevel LOG_TRACE > LOG_DEBUG for even more verbose output
    - Severeal preprocessor macros in dessert.h are now contained in enums
    - Renamed variable from bool to boolean to enable include of stdbool.h

20110530 - 1.02
    - configure will now fail when uthash or iw are missing
    - Introduced alternative names for some flags in dessert.h
    - libtool version = 1.8.1, no API changes (yet)

20110530 - 1.01
    - Re-written monitor code
    - More monitor interface information availabe to routing protocols
    - add dessert_utils.c with dessert_parse_mac
    - Milisecond resolution for log messages
    - add alternative log output format (disabled by default)
    - General code cleanup
    - use MAC-Macro & EXPLODE_ARRAY6-Macro
    - add DL_LENGTH macro
    - remove %M printf pattern
    - Configure includes checks for more dependencies
    - Replaced mkinstalldirs with MKDIR_P
    - libtool version = 1.7.1

20110330 - 1.00
    - Merged RSSI branch / monitor interface support
    - Added uthash and utlist header check in configure.ac
    - libtool version = 1.6.1

20110305 - 0.99
    - Logs can now be flushed every x seconds when zlib is used
    - Full string is now evaluated to update the loglevel (previously only first character)
    - libtool version = 1.5.1

20110226 - 0.98
    - Added mutex for lock file writes
    - libtool version = 1.4.1

unreleased - 0.97
    - Increased maximum number of characters in a log message from 1024 to 4096
    - Current libtool version = 1.4.1

20100801 - 0.96
    - Merged Android branch; SNMP support can now be disabled
    - Fixed zlib bug
    - Removed deprecated DESSERT_LOG_DEBUG and DESSERT_LOG_NODEBUG flags
    - Unified log output format (always a newline before the function and line number is printed)
    - Current libtool version = 1.3.1

20100624 - 0.95
    - loglevel is now configurable over the CLI